# deker-shell

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_doc.txt  setup.cfg  setup.py
.github/workflows/: github-actions.yml  on_push.yml  on_release.yml  on_test_release.yml
deker_shell/: __init__.py  completer.py  config.py  consts.py  help.py  main.py  utils.py
docs/: conf.py  index.rst
tests/: test_start.py
