; https://flake8.pycqa.org/en/latest/
; https://pypi.org/project/flake8-bugbear
; https://pypi.org/project/flake8-docstrings/
; https://pypi.org/project/flake8-import-order/
; https://pypi.org/project/flake8-pytest-style/
; https://pypi.org/project/pep8-naming/
[flake8]
min_python_version = 3.10
max-complexity = 12
max-doc-length = 120
max-line-length = 120
strictness = full
docstring_style = sphinx
docstring-convention = pep257
application_import_names = deker_shell
import-order-style = pycharm
exclude =
    venv/*,
    .git/*,
    __pycache__/*,
    .mypy_cache/*,
    .pytest_cache/*,
    .idea/*
extend-select = D417
per-file-ignores =
    __init__.py: D104, F401, F403, F405,
ignore =
    B012,
    D100,
    D104,
    D105,
    D106,
    D107,
    D203,
    D401,
    D404,
    DAR003,
    DAR104,
    DAR105,
    DAR201,
    DAR301,
    DAR401,
    I201,
    I202,
    N807,
    N813,
    W503,
    W504,

; https://pypi.org/project/darglint
[darglint]
strictness = full
docstring_style = sphinx
ignore =
    DAR003,
    DAR104,
    DAR105,
    DAR201,
    DAR301,
    DAR401

; https://docs.pytest.org
; https://pypi.org/project/pytest-asyncio/
; https://pytest-cov.readthedocs.io/en/latest/
; https://pypi.org/project/pytest-pythonpath/
; https://pypi.org/project/pytest-sugar/
[tool:pytest]
minversion = 7.0
asyncio_mode = auto
addopts = --ignore=tmp.py
norecursedirs = data

testpaths = ./tests

; for pytest < 7.0
;python_paths = ./deker_shell ./venv
; for pytest >= 7.0
pythonpath = ./deker_shell ./venv

filterwarnings =
    ignore::UserWarning
    ignore::DeprecationWarning
    ignore::ResourceWarning

; https://coverage.readthedocs.io
[coverage:report]
exclude_lines =
    pragma: no cover
    if typing.TYPE_CHECKING:
    if __name__ == .__main__.:

[options.entry_points]
console_scripts =
    deker = deker_shell.main:start
